// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideDrawer renders guide slide when a guide is selected 1`] = `
<div>
  <div
    class="sc-TBWPX ffWzT"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-jIkXHa dBPPAF"
    >
      <span
        class="sc-jOxtWs fCxqJj"
        data-testid="guidesBackButton"
      >
        <i
          class="sc-bdvvtL kSEjuX"
        >
          <span
            class="SVGInline SVGInline--cleaned centeredSvgIcon"
          >
            <svg
              class="SVGInline-svg SVGInline--cleaned-svg centeredSvgIcon-svg"
              style="width: 16px;height: 16px;"
            />
          </span>
        </i>
      </span>
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-kHOZwM kpzyri"
    />
    <div
      class="sc-ZOtfp iqtncb"
      title="Title"
    >
      Title
    </div>
    <div
      class="sc-fWCJzd bmKquF disable-font-ligatures"
    >
      <div>
        <div>
          Test Slide
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view including Remote Guides list 1`] = `
<div>
  <div
    class="sc-TBWPX ffWzT"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-jIkXHa dBPPAF"
    >
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-kHOZwM kpzyri"
    />
    <div
      class="sc-gIDmLj itjNdu slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-khQegj ixlwdt remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-dkQkyq gloaSL"
      >
        <div
          class="sc-cTAqQK bKwFoO"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-cHzqoD cwZxOa"
      >
        <li
          class="sc-gGPzkF hLcJmR"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-khQegj ixlwdt remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-dkQkyq dnUhZB"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-gGPzkF hLcJmR"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-khQegj ixlwdt remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-dkQkyq dnUhZB"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-gGPzkF hLcJmR"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-khQegj ixlwdt remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-dkQkyq dnUhZB"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-gGPzkF hLcJmR"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-khQegj ixlwdt remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-dkQkyq dnUhZB"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-gGPzkF hLcJmR"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-khQegj ixlwdt remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-dkQkyq dnUhZB"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-dkQkyq gloaSL"
      >
        <div
          class="sc-cTAqQK bKwFoO"
          data-testid="remoteGuidesTitle"
        >
          Remote Guides
        </div>
      </div>
      <div
        class="sc-cHzqoD cwZxOa"
      >
        <li
          class="sc-bSqaIl ktaFtR"
        >
          <span
            class="sc-khQegj ixlwdt remove-play-icon"
            data-testid="remoteGuideidentifier"
          >
            Title
          </span>
          <span
            class="sc-hkgtus fDqA-Dt"
            data-testid="removeGuideidentifier"
          >
            <i
              class="sc-bdvvtL jIQruX sl-bin"
              style="line-height: inherit;"
            />
          </span>
        </li>
      </div>
      <div
        class="sc-jivBlf gaZWlc"
      >
        <a
          class="sc-AjmGg bPbXvh"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view without Remote Guides 1`] = `
<div>
  <div
    class="sc-TBWPX ffWzT"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-jIkXHa dBPPAF"
    >
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-kHOZwM kpzyri"
    />
    <div
      class="sc-gIDmLj itjNdu slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-khQegj ixlwdt remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-dkQkyq gloaSL"
      >
        <div
          class="sc-cTAqQK bKwFoO"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-cHzqoD cwZxOa"
      >
        <li
          class="sc-gGPzkF hLcJmR"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-khQegj ixlwdt remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-dkQkyq dnUhZB"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-gGPzkF hLcJmR"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-khQegj ixlwdt remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-dkQkyq dnUhZB"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-gGPzkF hLcJmR"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-khQegj ixlwdt remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-dkQkyq dnUhZB"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-gGPzkF hLcJmR"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-khQegj ixlwdt remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-dkQkyq dnUhZB"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-gGPzkF hLcJmR"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-khQegj ixlwdt remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-dkQkyq dnUhZB"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-jivBlf gaZWlc"
      >
        <a
          class="sc-AjmGg bPbXvh"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;
